# GPU-Image_Processing

Cuda_CPU/: CMakeCache.txt  CMakeLists.txt  CudaImage  CudaImage.cu  Makefile  cmake_install.cmake  cpu_cuda.ipynb
Cuda_GPU/: CudaImage  CudaImage.cu  gpu_cuda .ipynb
Cuda_Parallel /: CMakeLists.txt  CudaImage.cu  Readme.md  cuda.ipynb
Cuda_Parallel /.ipynb_checkpoints/: cuda-checkpoint.ipynb
